bpk-lib/crates/macbat/macros/tests/trybuild_negative/projection_no_bindings.rs
use macbat::Projection;
#[derive(Projection)]
#[batpak(input = JsonValueInput)]
struct P {
    a: u8,
}
fn main() {}
